welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var i=0
var j=0
while (sortieTrouvee()==false){
	do{
		for (j<-1 to 5){
			avance()
			if (estSurBiscuit()){
				avance()
				j=j+1
				i=i+1
			}
			if (i>=3) {
			gauche();
		} else {
			droite();
		}
		i=0
		}
		  	} while (croisement==false)

}
avance()